# Calculator

./: .gitignore  CMakeLists.txt  Distrib.bat
CMake/: Common.cmake
Src/: CMakeLists.txt
Src/Calculator/: CMakeLists.txt  Calculator.cpp
Src/Calculator/Src/: Calculator.cpp
Src/SimpleExe/: CMakeLists.txt  Main.cpp
Src/Test/: CMakeLists.txt  Main.cpp
