cmake_minimum_required(VERSION 3.1)

project(Calculator VERSION 1.0.0)

enable_testing()

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_UTILITY_ROOT})
message("CMAKE_MODULE_PATH: " ${CMAKE_MODULE_PATH})
include(WindCommon)

set_property(GLOBAL PROPERTY USE_FOLDERS ON)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Lib)

m_set_vs_runtime_mt()

add_subdirectory(Src)